// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Modal Borrow Modal 1`] = `
<div
  className="sc-cxabCf ekFIyK"
>
  <div
    className="o-center-layout sc-crXcEl sc-llJcti TBZtj cVbChc"
  >
    <button
      appearance="text"
      className="sc-hKMtZM sc-papXJ jKfTjM ltXRM sc-gicCDI iJmeLr u-fit-content-width"
      data-element="button"
      disabled={false}
      icon="close"
      size="medium"
      variant="medium"
    />
    <div
      className="sc-iIPllB YwxgY"
    >
      <div
        className="sc-evZas dAWTOZ"
        gap={5}
      >
        <div
          className="sc-evZas hnbIOL"
          gap={3}
        >
          <div
            className="sc-kLLXSd iKmOmk"
            data-element="tableWrapper"
          >
            <table
              className="sc-ikZpkk eFtnVx"
              data-element="table"
            >
              <caption>
                <div
                  className="sc-iAvgwm eiTdTz"
                >
                  <span
                    className="sc-fEOsli duRfDa"
                    color="oxfordBlue"
                    type="heading 2"
                  >
                    Borrow asset
                  </span>
                </div>
              </caption>
              <thead
                className="sc-bZnhIo blrvud"
              >
                <tr>
                  <td
                    className="sc-gXmSlM sc-cCsOjp dJFjIR hSgQmU"
                  >
                    <div
                      className="sc-jIZahH sc-himrzO kDlMBg gQKlXj"
                    >
                      Amount
                    </div>
                  </td>
                  <td
                    className="sc-gXmSlM sc-cCsOjp hlwLoW hSgQmU"
                  >
                    <div
                      className="sc-jIZahH sc-himrzO kDlMBg gQKlXj"
                    >
                      
                    </div>
                  </td>
                </tr>
              </thead>
              <tbody>
                <tr
                  isTitleAString={false}
                >
                  <td
                    className="sc-gXmSlM dJFjIR"
                  >
                    <div
                      className="sc-breuTD krXkoK"
                    >
                      <span
                        className="sc-bczRLJ ehiAyy"
                      >
                        <div
                          className="sc-gsnTZi ZViBu"
                        >
                          <input
                            disabled={false}
                            type="text"
                          />
                        </div>
                        <span
                          className="sc-dkzDqf eUqaxQ"
                        >
                          
                        </span>
                      </span>
                      <button
                        appearance="secondary"
                        className="sc-hKMtZM sc-jSMfEi ivRYUu ioWRiD u-fit-content-width"
                        data-element="button"
                        size="small"
                        variant="thin"
                      >
                        MAX
                      </button>
                    </div>
                  </td>
                  <td
                    className="sc-gXmSlM hlwLoW"
                  >
                    <span>
                      ETH
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
          <div
            className="sc-kLLXSd iKmOmk"
            data-element="tableWrapper"
          >
            <table
              className="sc-ikZpkk eFtnVx"
              data-element="table"
            >
              <caption>
                
                
              </caption>
              <thead
                className="sc-bZnhIo blrvud"
              >
                <tr>
                  <td
                    className="sc-gXmSlM sc-cCsOjp dJFjIR hSgQmU"
                  >
                    <div
                      className="sc-jIZahH sc-himrzO kDlMBg gQKlXj"
                    >
                      Transaction overview
                    </div>
                  </td>
                  <td
                    className="sc-gXmSlM sc-cCsOjp hlwLoW hSgQmU"
                  >
                    <div
                      className="sc-jIZahH sc-himrzO kDlMBg gQKlXj"
                    >
                      
                    </div>
                  </td>
                </tr>
              </thead>
              <tbody>
                <tr
                  isTitleAString={true}
                >
                  <td
                    className="sc-gXmSlM dJFjIR"
                  >
                    <p
                      className="sc-fEOsli bnnmp c-text--body-3 c-text--color-oxfordBlue"
                    >
                      Health factor
                    </p>
                  </td>
                  <td
                    className="sc-gXmSlM hlwLoW"
                  >
                    <div
                      className="sc-evZas jlVWyS"
                    >
                      <div
                        className="sc-breuTD zJbNj"
                      >
                        <span
                          className="sc-fEOsli dcHyoc"
                          color="oxfordBlue"
                          type="body 1"
                        >
                          1,00
                        </span>
                      </div>
                      <span
                        className="sc-fEOsli dcHyoc"
                        color="oxfordBlue"
                        type="body 1"
                      >
                        Liquidation at &lt; 1.00
                      </span>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          className="sc-kDDrLX bOqWok"
          gap={1.875}
        >
          <div
            className="sc-evZas itRWRR"
            gap={1}
          >
            <button
              appearance="dark"
              className="sc-hKMtZM sc-gKXOVf iOviQP llhpmf u-full-width"
              data-element="button"
              size="large"
              variant="large"
            >
              Borrow asset
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Modal Deposit Modal 1`] = `
<div
  className="sc-cxabCf ekFIyK"
>
  <div
    className="o-center-layout sc-crXcEl sc-llJcti TBZtj cVbChc"
  >
    <button
      appearance="text"
      className="sc-hKMtZM sc-papXJ jKfTjM ltXRM sc-gicCDI iJmeLr u-fit-content-width"
      data-element="button"
      disabled={false}
      icon="close"
      size="medium"
      variant="medium"
    />
    <div
      className="sc-iIPllB YwxgY"
    >
      <div
        className="sc-evZas dAWTOZ"
        gap={5}
      >
        <div
          className="sc-evZas hnbIOL"
          gap={3}
        >
          <div
            className="sc-kLLXSd iKmOmk"
            data-element="tableWrapper"
          >
            <table
              className="sc-ikZpkk eFtnVx"
              data-element="table"
            >
              <caption>
                <div
                  className="sc-iAvgwm eiTdTz"
                >
                  <span
                    className="sc-fEOsli duRfDa"
                    color="oxfordBlue"
                    type="heading 2"
                  >
                    Deposit asset
                  </span>
                </div>
              </caption>
              <thead
                className="sc-bZnhIo blrvud"
              >
                <tr>
                  <td
                    className="sc-gXmSlM sc-cCsOjp dJFjIR hSgQmU"
                  >
                    <div
                      className="sc-jIZahH sc-himrzO kDlMBg gQKlXj"
                    >
                      Amount
                    </div>
                  </td>
                  <td
                    className="sc-gXmSlM sc-cCsOjp hlwLoW hSgQmU"
                  >
                    <div
                      className="sc-jIZahH sc-himrzO kDlMBg gQKlXj"
                    >
                      
                    </div>
                  </td>
                </tr>
              </thead>
              <tbody>
                <tr
                  isTitleAString={false}
                >
                  <td
                    className="sc-gXmSlM dJFjIR"
                  >
                    <div
                      className="sc-breuTD krXkoK"
                    >
                      <span
                        className="sc-bczRLJ ehiAyy"
                      >
                        <div
                          className="sc-gsnTZi ZViBu"
                        >
                          <input
                            disabled={false}
                            type="text"
                          />
                        </div>
                        <span
                          className="sc-dkzDqf eUqaxQ"
                        >
                          
                        </span>
                      </span>
                      <button
                        appearance="secondary"
                        className="sc-hKMtZM sc-jSMfEi ivRYUu ioWRiD u-fit-content-width"
                        data-element="button"
                        size="small"
                        variant="thin"
                      >
                        MAX
                      </button>
                    </div>
                  </td>
                  <td
                    className="sc-gXmSlM hlwLoW"
                  >
                    <span>
                      ETH
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
          <div
            className="sc-kLLXSd iKmOmk"
            data-element="tableWrapper"
          >
            <table
              className="sc-ikZpkk eFtnVx"
              data-element="table"
            >
              <caption>
                
                
              </caption>
              <thead
                className="sc-bZnhIo blrvud"
              >
                <tr>
                  <td
                    className="sc-gXmSlM sc-cCsOjp dJFjIR hSgQmU"
                  >
                    <div
                      className="sc-jIZahH sc-himrzO kDlMBg gQKlXj"
                    >
                      Transaction overview
                    </div>
                  </td>
                  <td
                    className="sc-gXmSlM sc-cCsOjp hlwLoW hSgQmU"
                  >
                    <div
                      className="sc-jIZahH sc-himrzO kDlMBg gQKlXj"
                    >
                      
                    </div>
                  </td>
                </tr>
              </thead>
              <tbody>
                <tr
                  isTitleAString={true}
                >
                  <td
                    className="sc-gXmSlM dJFjIR"
                  >
                    <span
                      className="sc-fEOsli bnnmp"
                      color="oxfordBlue"
                      type="body 3"
                    >
                      Supply APY
                    </span>
                  </td>
                  <td
                    className="sc-gXmSlM hlwLoW"
                  >
                    <div
                      className="sc-breuTD zJbNj"
                    >
                      <span
                        className="sc-fEOsli dcHyoc"
                        color="oxfordBlue"
                        type="body 1"
                      >
                        2.22%
                      </span>
                    </div>
                  </td>
                </tr>
                <tr
                  isTitleAString={true}
                >
                  <td
                    className="sc-gXmSlM dJFjIR"
                  >
                    <span
                      className="sc-fEOsli bnnmp"
                      color="oxfordBlue"
                      type="body 3"
                    >
                      Health factor
                    </span>
                  </td>
                  <td
                    className="sc-gXmSlM hlwLoW"
                  >
                    <div
                      className="sc-evZas jlVWyS"
                    >
                      <div
                        className="sc-breuTD zJbNj"
                      >
                        <span
                          className="sc-fEOsli dcHyoc"
                          color="oxfordBlue"
                          type="body 1"
                        >
                          1.00
                        </span>
                      </div>
                      <span
                        className="sc-fEOsli dcHyoc"
                        color="oxfordBlue"
                        type="body 1"
                      >
                        Liquidation at &lt; 1.00
                      </span>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          className="sc-kDDrLX bOqWok"
          gap={1.875}
        >
          <div
            className="sc-evZas itRWRR"
            gap={1}
          >
            <button
              appearance="dark"
              className="sc-hKMtZM sc-gKXOVf iOviQP llhpmf u-full-width"
              data-element="button"
              size="large"
              variant="large"
            >
              Approve to conitinue
            </button>
            <button
              appearance="secondary"
              className="sc-hKMtZM sc-jSMfEi bEgYQW ioWRiD u-full-width"
              data-element="button"
              disabled={true}
              size="large"
              variant="large"
            >
              Deposit ETH
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Modal Modal Example 1`] = `
<button
  appearance="primary"
  className="sc-hKMtZM sc-eCYdqJ kiXBJA jriGrI"
  data-element="button"
  onClick={[Function]}
  size="medium"
  variant="medium"
>
  Open Modal
</button>
`;

exports[`Storyshots Components/Modal Repay Modal 1`] = `
<div
  className="sc-cxabCf ekFIyK"
>
  <div
    className="o-center-layout sc-crXcEl sc-llJcti TBZtj cVbChc"
  >
    <button
      appearance="text"
      className="sc-hKMtZM sc-papXJ jKfTjM ltXRM sc-gicCDI iJmeLr u-fit-content-width"
      data-element="button"
      disabled={false}
      icon="close"
      size="medium"
      variant="medium"
    />
    <div
      className="sc-iIPllB YwxgY"
    >
      <div
        className="sc-evZas dAWTOZ"
        gap={5}
      >
        <div
          className="sc-evZas hnbIOL"
          gap={3}
        >
          <div
            className="sc-kLLXSd iKmOmk"
            data-element="tableWrapper"
          >
            <table
              className="sc-ikZpkk eFtnVx"
              data-element="table"
            >
              <caption>
                <div
                  className="sc-iAvgwm eiTdTz"
                >
                  <span
                    className="sc-fEOsli duRfDa"
                    color="oxfordBlue"
                    type="heading 2"
                  >
                    Repay asset
                  </span>
                </div>
              </caption>
              <thead
                className="sc-bZnhIo blrvud"
              >
                <tr>
                  <td
                    className="sc-gXmSlM sc-cCsOjp dJFjIR hSgQmU"
                  >
                    <div
                      className="sc-jIZahH sc-himrzO kDlMBg gQKlXj"
                    >
                      Amount
                    </div>
                  </td>
                  <td
                    className="sc-gXmSlM sc-cCsOjp hlwLoW hSgQmU"
                  >
                    <div
                      className="sc-jIZahH sc-himrzO kDlMBg gQKlXj"
                    >
                      
                    </div>
                  </td>
                </tr>
              </thead>
              <tbody>
                <tr
                  isTitleAString={false}
                >
                  <td
                    className="sc-gXmSlM dJFjIR"
                  >
                    <div
                      className="sc-breuTD krXkoK"
                    >
                      <span
                        className="sc-bczRLJ ehiAyy"
                      >
                        <div
                          className="sc-gsnTZi ZViBu"
                        >
                          <input
                            disabled={false}
                            type="text"
                          />
                        </div>
                        <span
                          className="sc-dkzDqf eUqaxQ"
                        >
                          
                        </span>
                      </span>
                      <button
                        appearance="secondary"
                        className="sc-hKMtZM sc-jSMfEi ivRYUu ioWRiD u-fit-content-width"
                        data-element="button"
                        size="small"
                        variant="thin"
                      >
                        MAX
                      </button>
                    </div>
                  </td>
                  <td
                    className="sc-gXmSlM hlwLoW"
                  >
                    <span>
                      ETH
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
          <div
            className="sc-kLLXSd iKmOmk"
            data-element="tableWrapper"
          >
            <table
              className="sc-ikZpkk eFtnVx"
              data-element="table"
            >
              <caption>
                
                
              </caption>
              <thead
                className="sc-bZnhIo blrvud"
              >
                <tr>
                  <td
                    className="sc-gXmSlM sc-cCsOjp dJFjIR hSgQmU"
                  >
                    <div
                      className="sc-jIZahH sc-himrzO kDlMBg gQKlXj"
                    >
                      Transaction overview
                    </div>
                  </td>
                  <td
                    className="sc-gXmSlM sc-cCsOjp hlwLoW hSgQmU"
                  >
                    <div
                      className="sc-jIZahH sc-himrzO kDlMBg gQKlXj"
                    >
                      
                    </div>
                  </td>
                </tr>
              </thead>
              <tbody>
                <tr
                  isTitleAString={true}
                >
                  <td
                    className="sc-gXmSlM dJFjIR"
                  >
                    <span
                      className="sc-fEOsli bnnmp"
                      color="oxfordBlue"
                      type="body 3"
                    >
                      Remaining debt
                    </span>
                  </td>
                  <td
                    className="sc-gXmSlM hlwLoW"
                  >
                    <div
                      className="sc-evZas jlVWyS"
                    >
                      <span
                        className="sc-fEOsli hWekve"
                        color="oxfordBlue"
                        type="body 1"
                      >
                        0.000001 Asset
                      </span>
                      <span
                        className="sc-fEOsli dcHyoc"
                        color="oxfordBlue"
                        type="body 1"
                      >
                        Liquidation at &lt; 1.00
                      </span>
                    </div>
                  </td>
                </tr>
                <tr
                  isTitleAString={true}
                >
                  <td
                    className="sc-gXmSlM dJFjIR"
                  >
                    <span
                      className="sc-fEOsli bnnmp"
                      color="oxfordBlue"
                      type="body 3"
                    >
                      Health factor
                    </span>
                  </td>
                  <td
                    className="sc-gXmSlM hlwLoW"
                  >
                    <div
                      className="sc-evZas jlVWyS"
                    >
                      <div
                        className="sc-breuTD zJbNj"
                      >
                        <span
                          className="sc-fEOsli dcHyoc"
                          color="oxfordBlue"
                          type="body 1"
                        >
                          1.00
                        </span>
                      </div>
                      <span
                        className="sc-fEOsli dcHyoc"
                        color="oxfordBlue"
                        type="body 1"
                      >
                        Liquidation at &lt; 1.00
                      </span>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          className="sc-kDDrLX bOqWok"
          gap={1.875}
        >
          <div
            className="sc-evZas itRWRR"
            gap={1}
          >
            <button
              appearance="dark"
              className="sc-hKMtZM sc-gKXOVf iOviQP llhpmf u-full-width"
              data-element="button"
              size="large"
              variant="large"
            >
              Repay asset
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Modal Withdraw Modal 1`] = `
<div
  className="sc-cxabCf ekFIyK"
>
  <div
    className="o-center-layout sc-crXcEl sc-llJcti TBZtj cVbChc"
  >
    <button
      appearance="text"
      className="sc-hKMtZM sc-papXJ jKfTjM ltXRM sc-gicCDI iJmeLr u-fit-content-width"
      data-element="button"
      disabled={false}
      icon="close"
      size="medium"
      variant="medium"
    />
    <div
      className="sc-iIPllB YwxgY"
    >
      <div
        className="sc-evZas dAWTOZ"
        gap={5}
      >
        <div
          className="sc-evZas hnbIOL"
          gap={3}
        >
          <div
            className="sc-kLLXSd iKmOmk"
            data-element="tableWrapper"
          >
            <table
              className="sc-ikZpkk eFtnVx"
              data-element="table"
            >
              <caption>
                <div
                  className="sc-iAvgwm eiTdTz"
                >
                  <span
                    className="sc-fEOsli duRfDa"
                    color="oxfordBlue"
                    type="heading 2"
                  >
                    Withdraw asset
                  </span>
                </div>
              </caption>
              <thead
                className="sc-bZnhIo blrvud"
              >
                <tr>
                  <td
                    className="sc-gXmSlM sc-cCsOjp dJFjIR hSgQmU"
                  >
                    <div
                      className="sc-jIZahH sc-himrzO kDlMBg gQKlXj"
                    >
                      Amount
                    </div>
                  </td>
                  <td
                    className="sc-gXmSlM sc-cCsOjp hlwLoW hSgQmU"
                  >
                    <div
                      className="sc-jIZahH sc-himrzO kDlMBg gQKlXj"
                    >
                      
                    </div>
                  </td>
                </tr>
              </thead>
              <tbody>
                <tr
                  isTitleAString={false}
                >
                  <td
                    className="sc-gXmSlM dJFjIR"
                  >
                    <div
                      className="sc-breuTD krXkoK"
                    >
                      <span
                        className="sc-bczRLJ ehiAyy"
                      >
                        <div
                          className="sc-gsnTZi ZViBu"
                        >
                          <input
                            disabled={false}
                            type="text"
                          />
                        </div>
                        <span
                          className="sc-dkzDqf eUqaxQ"
                        >
                          
                        </span>
                      </span>
                      <button
                        appearance="secondary"
                        className="sc-hKMtZM sc-jSMfEi ivRYUu ioWRiD u-fit-content-width"
                        data-element="button"
                        size="small"
                        variant="thin"
                      >
                        MAX
                      </button>
                    </div>
                  </td>
                  <td
                    className="sc-gXmSlM hlwLoW"
                  >
                    <span>
                      ETH
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
          <div
            className="sc-kLLXSd iKmOmk"
            data-element="tableWrapper"
          >
            <table
              className="sc-ikZpkk eFtnVx"
              data-element="table"
            >
              <caption>
                
                
              </caption>
              <thead
                className="sc-bZnhIo blrvud"
              >
                <tr>
                  <td
                    className="sc-gXmSlM sc-cCsOjp dJFjIR hSgQmU"
                  >
                    <div
                      className="sc-jIZahH sc-himrzO kDlMBg gQKlXj"
                    >
                      Transaction overview
                    </div>
                  </td>
                  <td
                    className="sc-gXmSlM sc-cCsOjp hlwLoW hSgQmU"
                  >
                    <div
                      className="sc-jIZahH sc-himrzO kDlMBg gQKlXj"
                    >
                      
                    </div>
                  </td>
                </tr>
              </thead>
              <tbody>
                <tr
                  isTitleAString={true}
                >
                  <td
                    className="sc-gXmSlM dJFjIR"
                  >
                    <span
                      className="sc-fEOsli bnnmp"
                      color="oxfordBlue"
                      type="body 3"
                    >
                      Remaining supply
                    </span>
                  </td>
                  <td
                    className="sc-gXmSlM hlwLoW"
                  >
                    <div
                      className="sc-evZas jlVWyS"
                    >
                      <div
                        className="sc-breuTD zJbNj"
                      >
                        <span
                          className="sc-fEOsli dcHyoc"
                          color="oxfordBlue"
                          type="body 1"
                        >
                          0.000001 Asset
                        </span>
                      </div>
                      <span
                        className="sc-fEOsli dcHyoc"
                        color="oxfordBlue"
                        type="body 1"
                      >
                        Liquidation at &lt; 1.00
                      </span>
                    </div>
                  </td>
                </tr>
                <tr
                  isTitleAString={true}
                >
                  <td
                    className="sc-gXmSlM dJFjIR"
                  >
                    <span
                      className="sc-fEOsli bnnmp"
                      color="oxfordBlue"
                      type="body 3"
                    >
                      Health factor
                    </span>
                  </td>
                  <td
                    className="sc-gXmSlM hlwLoW"
                  >
                    <div
                      className="sc-evZas jlVWyS"
                    >
                      <div
                        className="sc-breuTD zJbNj"
                      >
                        <span
                          className="sc-fEOsli dcHyoc"
                          color="oxfordBlue"
                          type="body 1"
                        >
                          1.00
                        </span>
                      </div>
                      <span
                        className="sc-fEOsli dcHyoc"
                        color="oxfordBlue"
                        type="body 1"
                      >
                        Liquidation at &lt; 1.00
                      </span>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          className="sc-kDDrLX bOqWok"
          gap={1.875}
        >
          <div
            className="sc-evZas itRWRR"
            gap={1}
          >
            <button
              appearance="dark"
              className="sc-hKMtZM sc-gKXOVf iOviQP llhpmf u-full-width"
              data-element="button"
              size="large"
              variant="large"
            >
              Repay asset
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
